# bevy-2d-test

./: .gitignore  Cargo.toml  README.MD
src/: animation.rs  control.rs  coords.rs  direction.rs  game.rs  main.rs
src/gameplay/: arena.rs  enemy.rs  mod.rs  player.rs
src/level/: arena.rs  enemy.rs  mod.rs  player.rs
src/menu/: end_menu.rs  in_game_menu.rs  mod.rs  start_menu.rs
webapp/: index.html
