[package]
name = "bevy-2d-test"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = "0.15"
bevy_math = "0.15"
bevy_framepace = "0.18"
bevy_rapier2d = { version = "0.28", features = [ "simd-stable", "debug-render-3d" ] }
rand = "0.8"